src/test/resources/validPrograms/counter.frj
class A {
	method @Number counter(Number current) = @[current; this.counter(new Std().add(current, 1))];
}

class Stringify {
	method String fromNum(Number n) = new Std().concat(n.toString(), "\n");
}

main =
	mut Std std = new Std(),
	std.@print(new Stringify().@fromNum(new A().counter(0)));
