src/test/resources/invalidPrograms/argc_mismatch.frj
class A {
    method Int hello(Int a, mut Std std) = String s = std.print("Hello"), a;
}

main = new A().hello();
